fix text align issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,5 @@
 body {
     background-color: black;
-    text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -10,18 +9,21 @@ body {
     font-weight: normal;
     font-size: 50px;
     color: white;
+    text-align: center;
 }
 
 .header--secondary {
     font-weight: 300;
     font-size: 42px;
     color: white;
+    text-align: center;
 }
 
 .header--quaternary {
     font-weight: normal;
     font-size: 21px;
     color: gray;
+    text-align: center;
 }
 
 .header--copyright {
